Colaboratory를 통해 생성됨

--- a/20220613_porto-seguro-safe-driver-prediction-visualize.ipynb
+++ b/20220613_porto-seguro-safe-driver-prediction-visualize.ipynb
@@ -2030,12 +2030,12 @@
         "plot_target_ratio_by_features(train, bin_features, 6, 3)"
       ],
       "metadata": {
-        "id": "6SDsKUjFYZmb",
-        "outputId": "936226be-08ab-45e9-8fbf-6f117fa9fefa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 922
-        }
+        },
+        "id": "6SDsKUjFYZmb",
+        "outputId": "936226be-08ab-45e9-8fbf-6f117fa9fefa"
       },
       "execution_count": 17,
       "outputs": [
@@ -2083,12 +2083,12 @@
         "plot_target_ratio_by_features(train, nom_features, 7, 2) # 고유한 타깃값이 많으므로 가로로 길게\n"
       ],
       "metadata": {
-        "id": "xKJfz6C2aGbh",
-        "outputId": "a3e7a708-e00e-4f18-83ee-acb8e0c5b40d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 910
-        }
+        },
+        "id": "xKJfz6C2aGbh",
+        "outputId": "a3e7a708-e00e-4f18-83ee-acb8e0c5b40d"
       },
       "execution_count": 20,
       "outputs": [
@@ -2156,12 +2156,12 @@
         "plot_target_ratio_by_features(train, ord_features, 8, 2, (12, 10)) #"
       ],
       "metadata": {
-        "id": "hGVJGT2tbY5C",
-        "outputId": "700c8ae8-927a-451f-dbb6-319be712f998",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 531
-        }
+        },
+        "id": "hGVJGT2tbY5C",
+        "outputId": "700c8ae8-927a-451f-dbb6-319be712f998"
       },
       "execution_count": 21,
       "outputs": [
@@ -2207,11 +2207,11 @@
         "pd.cut([1.0, 1.5, 2.1, 2.7, 3.5, 4.0], 3)"
       ],
       "metadata": {
-        "id": "U1Y6-Q1I1-_R",
-        "outputId": "a73beee3-3d94-4eb2-fcb5-7873017f12b1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "U1Y6-Q1I1-_R",
+        "outputId": "a73beee3-3d94-4eb2-fcb5-7873017f12b1"
       },
       "execution_count": 22,
       "outputs": [
@@ -2232,7 +2232,8 @@
       "cell_type": "markdown",
       "source": [
         " - 연속형 데이터를 범주형 데이터로 바꾸는 효과\n",
-        " - float타입 → category타입"
+        " - float타입 → category타입\n",
+        " - \"(\"는 초과, \"]\"는 이하"
       ],
       "metadata": {
         "id": "_1dWm5LF4HVT"
@@ -2278,17 +2279,17 @@
         "grid = gridspec.GridSpec(5, 2)\n",
         "\n",
         "\n",
-        "ax = plt.subplot(grid[0]) \n",
-        "ax = plt.subplot(grid[1])\n",
-        "plt.subplot(grid[3])"
+        "ax = plt.subplot(grid[0]) # 변수에 할당만해도 그려짐\n",
+        "ax = plt.subplot(grid[1]) \n",
+        "plt.subplot(grid[3]) # 변수에 할당없이도 그려짐"
       ],
       "metadata": {
-        "id": "h0uyoN96qpIL",
-        "outputId": "b8164612-0539-4d8e-8f69-e1b43f4eebbb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 362
-        }
+        },
+        "id": "h0uyoN96qpIL",
+        "outputId": "b8164612-0539-4d8e-8f69-e1b43f4eebbb"
       },
       "execution_count": 10,
       "outputs": [
