--- a/20220616_porto-seguro-safe-driver-prediction-improve.ipynb
+++ b/20220616_porto-seguro-safe-driver-prediction-improve.ipynb
@@ -18,7 +18,7 @@
       ],
       "metadata": {
         "id": "g8C4TYr9sKTr",
-        "outputId": "18d33dbe-0949-4b43-889d-44bbb5b4b3ce",
+        "outputId": "9d46a0a7-b266-4684-8a1d-e52a0cb82dc7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -180,7 +180,7 @@
       ],
       "metadata": {
         "id": "7guj-ZIiBohB",
-        "outputId": "caf13630-1d21-4abf-948b-f05e370b3f8a",
+        "outputId": "245caec0-2520-4766-8f66-6f7aabcd66be",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -264,7 +264,7 @@
       ],
       "metadata": {
         "id": "v-yrWuAj9q7X",
-        "outputId": "9ea9f399-f474-4fe7-d074-2210c2d6398f",
+        "outputId": "d72a9951-178f-49cd-8dc0-6993c59cf366",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -317,7 +317,7 @@
       ],
       "metadata": {
         "id": "peUl9K3H_ZvX",
-        "outputId": "b3972f58-2268-404d-b869-94a65d51b092",
+        "outputId": "7696b032-12f6-465b-d464-6457731eefe7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -348,7 +348,7 @@
       ],
       "metadata": {
         "id": "L09ooyiq_99P",
-        "outputId": "c750f27f-2787-479d-c490-9708e8f68c83",
+        "outputId": "af60dad0-4f62-4c2c-ecda-b25bee4a07f9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -401,7 +401,7 @@
       ],
       "metadata": {
         "id": "L2NzsFxKHNkV",
-        "outputId": "555e7449-10d4-47b2-c715-91e7bd93e562",
+        "outputId": "27669978-f2d2-4c3e-f92d-78fda61f0444",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -457,7 +457,7 @@
       ],
       "metadata": {
         "id": "rj2oXfQZA7I4",
-        "outputId": "f34bf782-c194-4d29-ee78-0049268a74ac",
+        "outputId": "4f4b8f82-4a5c-43d1-e8fc-71097330ba8b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -494,7 +494,7 @@
       ],
       "metadata": {
         "id": "QGForR7UE7tR",
-        "outputId": "e491efd0-c04f-46a5-edd9-59ea4ebdbbec",
+        "outputId": "016d0c95-8ea3-44ce-e7ee-fd4856bbda8d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -569,7 +569,7 @@
       "metadata": {
         "id": "S-yuZT8KFEsC"
       },
-      "execution_count": 22,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -595,7 +595,7 @@
       "metadata": {
         "id": "XqblPRftu5ca"
       },
-      "execution_count": 23,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -635,7 +635,7 @@
       "metadata": {
         "id": "5CJQmUYXuwIa"
       },
-      "execution_count": 24,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -675,14 +675,76 @@
       "metadata": {
         "id": "WjFD0m7uw1Py"
       },
-      "execution_count": 25,
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### 평가지표 계산 함수 : 정규화된 지니계수\n"
+      ],
+      "metadata": {
+        "id": "pdt4-l793f2U"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 실제 타깃값(y_true)와 예측 확률값(y_pred) 입력받아 정규화 지니계수 반환\n",
+        "import numpy as np\n",
+        "\n",
+        "def eval_gini(y_true, y_pred):\n",
+        "    assert y_true.shape == y_pred.shape # assert : True가 아니면 오류 발생\n",
+        "\n",
+        "    n_samples = y_true.shape[0] # 데이터 개수\n",
+        "    L_mid = np.linspace(1/n_samples, 1, n_samples) # 대각선 값\n",
+        "\n",
+        "    # 1) 예측값에 대한 지니계수\n",
+        "    pred_order = y_true[y_pred.argsort()] # y_pred.argsort() : y_pred배열 오름차순 인덱스값 배열\n",
+        "    # 즉, y_pred 크기순으로 y_true 정렬\n",
+        "    L_pred = np.cumsum(pred_order) / np.sum(pred_order) # 로렌츠 곡선\n",
+        "    G_pred = np.sum(L_mid - L_pred) # 예측값에 대한 지니계수\n",
+        "\n",
+        "    # 2) 예측이 완벽할 때 지니계수\n",
+        "    true_order = y_true[y_true.argsort()] # y_true 크기순으로 y_true 값 정렬\n",
+        "    L_true = np.cumsum(true_order) / np.sum(true_order) # 로렌츠 곡선\n",
+        "    G_true = np.sum(L_mid - L_true) # 예측이 완벽할 때 지니계수\n",
+        "\n",
+        "    # 정규화된 지니계수\n",
+        "    return G_pred / G_true"
+      ],
+      "metadata": {
+        "id": "F7YdM1753x14"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# LightGBM용 gini() 함수\n",
+        "def gini(preds, dtrain):\n",
+        "    labels = dtrain.get_label()\n",
+        "    return 'gini', eval_gini(labels, preds), True\n",
+        "    # 평가지표이름, 평가점수, 평가점수가 높을수록 좋은지여부?\n",
+        "    # 이후 lightGBM의 훈련시 feval 파라미터로 들어가는 함수로써 3가지 값을 요구함"
+      ],
+      "metadata": {
+        "id": "LEimtX2x37LR"
+      },
+      "execution_count": 24,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
         "#### (베이지안 최적화용) 평가지표 계산함수 작성\n",
-        " - param_bounds를 순회하며 최적의 하이퍼파라미터 값을 적용해 모델을 훈련 → 훈련된 모델로 성능을 평가하기위한 평가지표 필요"
+        " - param_bounds를 순회하며 최적의 하이퍼파라미터 값을 적용해 모델을 훈련 → 훈련된 모델로 성능을 평가하기위한 평가지표 필요\n",
+        "\n",
+        " - eval_function()은 베이지안 최적화를 수행하기 위한 평가지표(지니계수) 계산함수\n",
+        "  > 이 함수로 지니계수를 계산해 최적 하이퍼파라미터 찾는다\n",
+        "\n",
+        "  > 최적화하려는 LightGBM모델의 하이퍼파라미터 7개를 인수로 받고 지니계수 반화"
       ],
       "metadata": {
         "id": "ICftL88jyWq3"
@@ -691,10 +753,56 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "def eval_function(num_leaves, lambda_l1, lambda_l2, feature_fraction,\n",
+        "                  bagging_fraction, min_child_samples, min_child_weight): # 베이지안 최적화를 위해 확인해볼 하이퍼 파라미터들\n",
+        "\n",
+        "    # 베이지안 최적화를 수행할 하이퍼파라미터\n",
+        "    params = {'num_leaves' : int(round(num_leaves)),    # num_leaves, min_child_samples는 정수여야 함\n",
+        "              'lambda_l1' : lambda_l1,\n",
+        "              'lambda_l2' : lambda_l2,\n",
+        "              'feature_fraction' : feature_fraction,\n",
+        "              'bagging_fraction' : bagging_fraction,\n",
+        "              'min_child_samples' : int(round(min_child_samples)),\n",
+        "              'min_child_weight' : min_child_weight,\n",
+        "              'feature_pre_filter' : False}\n",
+        "\n",
+        "    # 고정된 하이퍼파라미터도 추가\n",
+        "    params.update(fixed_params) # 딕셔너리에 합칠시 update()\n",
+        "\n",
+        "    print('하이퍼파라미터:', params)\n",
+        "\n",
+        "\n",
+        "    # LightGBM 모델 훈련\n",
+        "    lgb_model = lgb.train(params=params,\n",
+        "                          train_set=bayes_dtrain,\n",
+        "                          num_boost_round=2500,\n",
+        "                          valid_sets=bayes_dvalid,\n",
+        "                          feval=gini,\n",
+        "                          early_stopping_rounds=300,\n",
+        "                          verbose_eval=False)\n",
+        "    \n",
+        "    # 검증 데이터로 예측 수행\n",
+        "    preds = lgb_model.predict(X_valid)\n",
+        "\n",
+        "    # 지니계수 계산\n",
+        "    gini_score = eval_gini(y_valid, preds)\n",
+        "    print(f'지니계수 : {gini_score}\\n')\n",
+        "\n",
+        "    return gini_score\n"
       ],
       "metadata": {
         "id": "teOVH3toyWSZ"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "Nlg8oj4r4FjU"
       },
       "execution_count": null,
       "outputs": []
