Colaboratory를 통해 생성됨

--- a/20220616_porto-seguro-safe-driver-prediction-improve.ipynb
+++ b/20220616_porto-seguro-safe-driver-prediction-improve.ipynb
@@ -18,7 +18,7 @@
       ],
       "metadata": {
         "id": "g8C4TYr9sKTr",
-        "outputId": "9d46a0a7-b266-4684-8a1d-e52a0cb82dc7",
+        "outputId": "5ebfccb0-95a3-4625-ad91-6cb640102556",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -180,7 +180,7 @@
       ],
       "metadata": {
         "id": "7guj-ZIiBohB",
-        "outputId": "245caec0-2520-4766-8f66-6f7aabcd66be",
+        "outputId": "a31039c8-fa10-4c4c-b6d9-1d9d03e26924",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -264,7 +264,7 @@
       ],
       "metadata": {
         "id": "v-yrWuAj9q7X",
-        "outputId": "d72a9951-178f-49cd-8dc0-6993c59cf366",
+        "outputId": "76f93495-be8e-4a2c-f798-ece91c9e48ff",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -317,7 +317,7 @@
       ],
       "metadata": {
         "id": "peUl9K3H_ZvX",
-        "outputId": "7696b032-12f6-465b-d464-6457731eefe7",
+        "outputId": "4e26ee9b-72bc-45ff-8a3c-604433924998",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -348,7 +348,7 @@
       ],
       "metadata": {
         "id": "L09ooyiq_99P",
-        "outputId": "af60dad0-4f62-4c2c-ecda-b25bee4a07f9",
+        "outputId": "3badfcdc-44d7-43e0-d8ea-16233d88ec5b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -401,7 +401,7 @@
       ],
       "metadata": {
         "id": "L2NzsFxKHNkV",
-        "outputId": "27669978-f2d2-4c3e-f92d-78fda61f0444",
+        "outputId": "dfbe9387-7b13-4e1f-fe7a-a9cf883ece8e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -457,7 +457,7 @@
       ],
       "metadata": {
         "id": "rj2oXfQZA7I4",
-        "outputId": "4f4b8f82-4a5c-43d1-e8fc-71097330ba8b",
+        "outputId": "fc1700e8-9f77-4395-b1e5-d26c157fb7ae",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -494,7 +494,7 @@
       ],
       "metadata": {
         "id": "QGForR7UE7tR",
-        "outputId": "016d0c95-8ea3-44ce-e7ee-fd4856bbda8d",
+        "outputId": "a3894fb9-b9fe-4aa7-d957-e5bd10e0a486",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -716,7 +716,7 @@
       "metadata": {
         "id": "F7YdM1753x14"
       },
-      "execution_count": 23,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -732,7 +732,7 @@
       "metadata": {
         "id": "LEimtX2x37LR"
       },
-      "execution_count": 24,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -793,16 +793,237 @@
       "metadata": {
         "id": "teOVH3toyWSZ"
       },
-      "execution_count": 25,
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### 최적화 수행\n",
+        " - 1.하이퍼파라미터 범위 설정 : param_bounds\n",
+        " - 2.평가지표 계산 함수 : eval_function()\n",
+        " - 3.베이지안 최적화 객체 생성(파라미터 : param_bounds, eval_function)"
+      ],
+      "metadata": {
+        "id": "pm1TH-KmcBWf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### 베이지안 최적화 관련 모듈 설치"
+      ],
+      "metadata": {
+        "id": "IjoqZqs6gb33"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pip install bayesian-optimization"
+      ],
+      "metadata": {
+        "id": "EALFxXYkgYBR"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "from bayes_opt import BayesianOptimization\n",
+        "\n",
+        "# 베이지안 최적화 객체 생성\n",
+        "optimizer = BayesianOptimization(f=eval_function,       # 평가지표 계산 함수\n",
+        "                                 pbounds=param_bounds,  # 하이퍼파라미터 범위\n",
+        "                                 random_state=0)"
       ],
       "metadata": {
         "id": "Nlg8oj4r4FjU"
+      },
+      "execution_count": 30,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "optimizer.maximize(init_points=3, n_iter=6) # init_points : 무작위로 하이퍼파라미터 탐색하는 횟수, n_iter : 베이지안 최적화 반복횟수\n",
+        "# 베이지안 최적화는 init_points와 n_iter를 더한 값만큼 반복, 총9회 반복"
+      ],
+      "metadata": {
+        "id": "r3264QH9gJWK",
+        "outputId": "3d697939-0bf0-4434-cb4f-c2b62df7b825",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "|   iter    |  target   | baggin... | featur... | lambda_l1 | lambda_l2 | min_ch... | min_ch... | num_le... |\n",
+            "-------------------------------------------------------------------------------------------------------------\n",
+            "하이퍼파라미터: {'num_leaves': 34, 'lambda_l1': 0.8205526752143287, 'lambda_l2': 0.9544883182996897, 'feature_fraction': 0.6715189366372419, 'bagging_fraction': 0.7646440511781974, 'min_child_samples': 8, 'min_child_weight': 29.376823391999682, 'feature_pre_filter': False, 'objective': 'binary', 'learning_rate': 0.005, 'bagging_freq': 1, 'force_row_wise': True, 'random_state': 1991}\n",
+            "지니계수 : 0.2846778857441302\n",
+            "\n",
+            "| \u001b[0m 1       \u001b[0m | \u001b[0m 0.2847  \u001b[0m | \u001b[0m 0.7646  \u001b[0m | \u001b[0m 0.6715  \u001b[0m | \u001b[0m 0.8206  \u001b[0m | \u001b[0m 0.9545  \u001b[0m | \u001b[0m 7.695   \u001b[0m | \u001b[0m 29.38   \u001b[0m | \u001b[0m 34.38   \u001b[0m |\n",
+            "하이퍼파라미터: {'num_leaves': 39, 'lambda_l1': 0.7766883037651555, 'lambda_l2': 0.9791725038082665, 'feature_fraction': 0.6963662760501029, 'bagging_fraction': 0.867531900234624, 'min_child_samples': 8, 'min_child_weight': 27.04133683281797, 'feature_pre_filter': False, 'objective': 'binary', 'learning_rate': 0.005, 'bagging_freq': 1, 'force_row_wise': True, 'random_state': 1991}\n",
+            "지니계수 : 0.2837707744530632\n",
+            "\n",
+            "| \u001b[0m 2       \u001b[0m | \u001b[0m 0.2838  \u001b[0m | \u001b[0m 0.8675  \u001b[0m | \u001b[0m 0.6964  \u001b[0m | \u001b[0m 0.7767  \u001b[0m | \u001b[0m 0.9792  \u001b[0m | \u001b[0m 8.116   \u001b[0m | \u001b[0m 27.04   \u001b[0m | \u001b[0m 39.26   \u001b[0m |\n",
+            "하이퍼파라미터: {'num_leaves': 40, 'lambda_l1': 0.7040436794880651, 'lambda_l2': 0.9832619845547939, 'feature_fraction': 0.608712929970154, 'bagging_fraction': 0.6213108174593661, 'min_child_samples': 9, 'min_child_weight': 36.10036444740457, 'feature_pre_filter': False, 'objective': 'binary', 'learning_rate': 0.005, 'bagging_freq': 1, 'force_row_wise': True, 'random_state': 1991}\n",
+            "지니계수 : 0.2856516718359553\n",
+            "\n",
+            "| \u001b[95m 3       \u001b[0m | \u001b[95m 0.2857  \u001b[0m | \u001b[95m 0.6213  \u001b[0m | \u001b[95m 0.6087  \u001b[0m | \u001b[95m 0.704   \u001b[0m | \u001b[95m 0.9833  \u001b[0m | \u001b[95m 9.113   \u001b[0m | \u001b[95m 36.1    \u001b[0m | \u001b[95m 39.79   \u001b[0m |\n",
+            "하이퍼파라미터: {'num_leaves': 39, 'lambda_l1': 0.894923427182547, 'lambda_l2': 0.9583601786148422, 'feature_fraction': 0.660961016236578, 'bagging_fraction': 0.7187091963023217, 'min_child_samples': 8, 'min_child_weight': 37.23501356017725, 'feature_pre_filter': False, 'objective': 'binary', 'learning_rate': 0.005, 'bagging_freq': 1, 'force_row_wise': True, 'random_state': 1991}\n",
+            "지니계수 : 0.2857258515448462\n",
+            "\n",
+            "| \u001b[95m 4       \u001b[0m | \u001b[95m 0.2857  \u001b[0m | \u001b[95m 0.7187  \u001b[0m | \u001b[95m 0.661   \u001b[0m | \u001b[95m 0.8949  \u001b[0m | \u001b[95m 0.9584  \u001b[0m | \u001b[95m 8.032   \u001b[0m | \u001b[95m 37.24   \u001b[0m | \u001b[95m 38.95   \u001b[0m |\n",
+            "하이퍼파라미터: {'num_leaves': 32, 'lambda_l1': 0.7, 'lambda_l2': 0.9, 'feature_fraction': 0.6, 'bagging_fraction': 0.6, 'min_child_samples': 10, 'min_child_weight': 40.0, 'feature_pre_filter': False, 'objective': 'binary', 'learning_rate': 0.005, 'bagging_freq': 1, 'force_row_wise': True, 'random_state': 1991}\n",
+            "지니계수 : 0.2852150244734812\n",
+            "\n",
+            "| \u001b[0m 5       \u001b[0m | \u001b[0m 0.2852  \u001b[0m | \u001b[0m 0.6     \u001b[0m | \u001b[0m 0.6     \u001b[0m | \u001b[0m 0.7     \u001b[0m | \u001b[0m 0.9     \u001b[0m | \u001b[0m 10.0    \u001b[0m | \u001b[0m 40.0    \u001b[0m | \u001b[0m 31.68   \u001b[0m |\n",
+            "하이퍼파라미터: {'num_leaves': 30, 'lambda_l1': 0.8238942380232972, 'lambda_l2': 0.9238819205808911, 'feature_fraction': 0.6336621508258571, 'bagging_fraction': 0.8360161123978654, 'min_child_samples': 10, 'min_child_weight': 10.07325174263459, 'feature_pre_filter': False, 'objective': 'binary', 'learning_rate': 0.005, 'bagging_freq': 1, 'force_row_wise': True, 'random_state': 1991}\n",
+            "지니계수 : 0.28358097225324685\n",
+            "\n",
+            "| \u001b[0m 6       \u001b[0m | \u001b[0m 0.2836  \u001b[0m | \u001b[0m 0.836   \u001b[0m | \u001b[0m 0.6337  \u001b[0m | \u001b[0m 0.8239  \u001b[0m | \u001b[0m 0.9239  \u001b[0m | \u001b[0m 9.622   \u001b[0m | \u001b[0m 10.07   \u001b[0m | \u001b[0m 30.07   \u001b[0m |\n",
+            "하이퍼파라미터: {'num_leaves': 40, 'lambda_l1': 0.7, 'lambda_l2': 1.0, 'feature_fraction': 0.7, 'bagging_fraction': 0.9, 'min_child_samples': 10, 'min_child_weight': 40.0, 'feature_pre_filter': False, 'objective': 'binary', 'learning_rate': 0.005, 'bagging_freq': 1, 'force_row_wise': True, 'random_state': 1991}\n",
+            "지니계수 : 0.28416844158148385\n",
+            "\n",
+            "| \u001b[0m 7       \u001b[0m | \u001b[0m 0.2842  \u001b[0m | \u001b[0m 0.9     \u001b[0m | \u001b[0m 0.7     \u001b[0m | \u001b[0m 0.7     \u001b[0m | \u001b[0m 1.0     \u001b[0m | \u001b[0m 10.0    \u001b[0m | \u001b[0m 40.0    \u001b[0m | \u001b[0m 40.0    \u001b[0m |\n",
+            "하이퍼파라미터: {'num_leaves': 38, 'lambda_l1': 0.7022181633556216, 'lambda_l2': 0.9093673458298128, 'feature_fraction': 0.6229349682584451, 'bagging_fraction': 0.617193899018855, 'min_child_samples': 8, 'min_child_weight': 35.24386669357726, 'feature_pre_filter': False, 'objective': 'binary', 'learning_rate': 0.005, 'bagging_freq': 1, 'force_row_wise': True, 'random_state': 1991}\n",
+            "지니계수 : 0.285728366659533\n",
+            "\n",
+            "| \u001b[95m 8       \u001b[0m | \u001b[95m 0.2857  \u001b[0m | \u001b[95m 0.6172  \u001b[0m | \u001b[95m 0.6229  \u001b[0m | \u001b[95m 0.7022  \u001b[0m | \u001b[95m 0.9094  \u001b[0m | \u001b[95m 7.936   \u001b[0m | \u001b[95m 35.24   \u001b[0m | \u001b[95m 37.53   \u001b[0m |\n",
+            "하이퍼파라미터: {'num_leaves': 40, 'lambda_l1': 0.9, 'lambda_l2': 0.9159110552679353, 'feature_fraction': 0.6, 'bagging_fraction': 0.6, 'min_child_samples': 6, 'min_child_weight': 35.14591174568853, 'feature_pre_filter': False, 'objective': 'binary', 'learning_rate': 0.005, 'bagging_freq': 1, 'force_row_wise': True, 'random_state': 1991}\n",
+            "지니계수 : 0.2860104800381049\n",
+            "\n",
+            "| \u001b[95m 9       \u001b[0m | \u001b[95m 0.286   \u001b[0m | \u001b[95m 0.6     \u001b[0m | \u001b[95m 0.6     \u001b[0m | \u001b[95m 0.9     \u001b[0m | \u001b[95m 0.9159  \u001b[0m | \u001b[95m 6.0     \u001b[0m | \u001b[95m 35.15   \u001b[0m | \u001b[95m 40.0    \u001b[0m |\n",
+            "=============================================================================================================\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "optimizer.max # dict"
+      ],
+      "metadata": {
+        "id": "nULqZ1t_heu0",
+        "outputId": "2dc509db-d831-41bf-c3cd-7c5137ca1bd9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'params': {'bagging_fraction': 0.6,\n",
+              "  'feature_fraction': 0.6,\n",
+              "  'lambda_l1': 0.9,\n",
+              "  'lambda_l2': 0.9159110552679353,\n",
+              "  'min_child_samples': 6.0,\n",
+              "  'min_child_weight': 35.14591174568853,\n",
+              "  'num_leaves': 40.0},\n",
+              " 'target': 0.2860104800381049}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "optimizer.max.keys() # dict의 key들"
+      ],
+      "metadata": {
+        "id": "KM7fJgu2pPNW",
+        "outputId": "f9c22865-0ed0-4656-e95f-d207f78eca9f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_keys(['target', 'params'])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "optimizer.max['params'] # 지니계수가 최대가 되는, 즉 최적 하이퍼파라미터"
+      ],
+      "metadata": {
+        "id": "QnDzdoTuvNqq",
+        "outputId": "31932231-bc50-41d8-a100-4fa1700efec2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'bagging_fraction': 0.6,\n",
+              " 'feature_fraction': 0.6,\n",
+              " 'lambda_l1': 0.9,\n",
+              " 'lambda_l2': 0.9159110552679353,\n",
+              " 'min_child_samples': 6.0,\n",
+              " 'min_child_weight': 35.14591174568853,\n",
+              " 'num_leaves': 40.0}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "max_params = optimizer.max['params']"
+      ],
+      "metadata": {
+        "id": "slibdysCvVPc"
+      },
+      "execution_count": 39,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " - num_leaves, min_child_samples는 원래 정수형 하이퍼파라미터이므로 정수형으로 변환"
+      ],
+      "metadata": {
+        "id": "vH3bfVv7viS7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "max_params['num_leaves']"
+      ],
+      "metadata": {
+        "id": "SV1s7BJqvh0Y"
       },
       "execution_count": null,
       "outputs": []
