Colaboratory를 통해 생성됨

--- a/20220616_porto-seguro-safe-driver-prediction-improve.ipynb
+++ b/20220616_porto-seguro-safe-driver-prediction-improve.ipynb
@@ -851,11 +851,11 @@
         "# 베이지안 최적화는 init_points와 n_iter를 더한 값만큼 반복, 총9회 반복"
       ],
       "metadata": {
-        "id": "r3264QH9gJWK",
-        "outputId": "3d697939-0bf0-4434-cb4f-c2b62df7b825",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "r3264QH9gJWK",
+        "outputId": "3d697939-0bf0-4434-cb4f-c2b62df7b825"
       },
       "execution_count": 31,
       "outputs": [
@@ -912,11 +912,11 @@
         "optimizer.max # dict"
       ],
       "metadata": {
-        "id": "nULqZ1t_heu0",
-        "outputId": "2dc509db-d831-41bf-c3cd-7c5137ca1bd9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "nULqZ1t_heu0",
+        "outputId": "2dc509db-d831-41bf-c3cd-7c5137ca1bd9"
       },
       "execution_count": 35,
       "outputs": [
@@ -945,11 +945,11 @@
         "optimizer.max.keys() # dict의 key들"
       ],
       "metadata": {
-        "id": "KM7fJgu2pPNW",
-        "outputId": "f9c22865-0ed0-4656-e95f-d207f78eca9f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KM7fJgu2pPNW",
+        "outputId": "f9c22865-0ed0-4656-e95f-d207f78eca9f"
       },
       "execution_count": 37,
       "outputs": [
@@ -971,11 +971,11 @@
         "optimizer.max['params'] # 지니계수가 최대가 되는, 즉 최적 하이퍼파라미터"
       ],
       "metadata": {
-        "id": "QnDzdoTuvNqq",
-        "outputId": "31932231-bc50-41d8-a100-4fa1700efec2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QnDzdoTuvNqq",
+        "outputId": "31932231-bc50-41d8-a100-4fa1700efec2"
       },
       "execution_count": 38,
       "outputs": [
@@ -1020,10 +1020,74 @@
     {
       "cell_type": "code",
       "source": [
-        "max_params['num_leaves']"
+        "max_params.update({'num_leaves': int(round(max_params['num_leaves'])),  # 딕셔너리.update({딕셔너리}) : 딕셔너리 변경/추가\n",
+        "                   'min_child_samples': int(round(max_params['min_child_samples']))})"
       ],
       "metadata": {
         "id": "SV1s7BJqvh0Y"
+      },
+      "execution_count": 40,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "max_params"
+      ],
+      "metadata": {
+        "id": "Z4_DHzt7428o",
+        "outputId": "130dd7d9-8ed2-41e2-ab47-aaf7d99318df",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'bagging_fraction': 0.6,\n",
+              " 'feature_fraction': 0.6,\n",
+              " 'lambda_l1': 0.9,\n",
+              " 'lambda_l2': 0.9159110552679353,\n",
+              " 'min_child_samples': 6,\n",
+              " 'min_child_weight': 35.14591174568853,\n",
+              " 'num_leaves': 40}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " - 고정된 하이퍼파라미터들(fixed_params) 추가"
+      ],
+      "metadata": {
+        "id": "QKHb62Yk5OvR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "max_params.update(fixed_params)"
+      ],
+      "metadata": {
+        "id": "3hP_eMhU45yu"
+      },
+      "execution_count": 43,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "max"
+      ],
+      "metadata": {
+        "id": "HjE4nhd85Tu_"
       },
       "execution_count": null,
       "outputs": []
